--- a/DOM Challenge Starting Files/index.html
+++ b/DOM Challenge Starting Files/index.html
@@ -12,7 +12,7 @@
 
     <input type="checkbox">
 
-    <button style=":active color:red;">Click Me</button>
+    <button style=":active color:red">Click Me</button>
 
     <ul>
       <li class="list">
@@ -22,6 +22,8 @@
       <li class="list">Third</li>
     </ul>
 
+  
   </body>
 
 </html>
+
