--- a/DOM Challenge Starting Files/index.html
+++ b/DOM Challenge Starting Files/index.html
@@ -12,10 +12,9 @@
 
     <input type="checkbox">
 
-    <button style=":active color:red">Click Me</button>
+    <button style=":active">Click Me</button>
 
-    <ul>
-      <li class="list">
+    <ul> 
         <a href="https://www.google.com">Google</a>
       </li>
       <li class="list">Second</li>
