--- a/DOM Challenge Starting Files/index.html
+++ b/DOM Challenge Starting Files/index.html
@@ -9,10 +9,8 @@
   <body>
 
     <h1>Hello</h1>
-
     <input type="checkbox">
-
-    <button style=":active">Click Me</button>
+    <button id ="btn" class="butn" style=":active">Click Me</button>
 
     <ul> 
         <a href="https://www.google.com">Google</a>
@@ -21,7 +19,7 @@
       <li class="list">Third</li>
     </ul>
 
-  
+  <h1>Kashyap</h1>
   </body>
 
 </html>
